# cg

./: .gitignore
examples/convex_hull/: CMakeLists.txt  andrew_hull.cpp
examples/operations/: triangle_contains_point.cpp
include/cg/common/: range.h
include/cg/convex_hull/: andrew.h  graham.h
include/cg/io/: io_utils.h  point.h  range.h  rectangle.h  segment.h  triangle.h  vector.h
include/cg/operations/: orientation.h
include/cg/operations/contains/: contour_point.h  convex_contour_point.h  segment_point.h  triangle_point.h
include/cg/operations/has_intersection/: rectangle_segment.h  segment_segment.h  triangle_segment.h
include/cg/primitives/: contour.h  point.h  range.h  rectangle.h  segment.h  triangle.h  vector.h
include/cg/visualization/: draw_util.h
src/: stdafx.h
src/visualization/: visualization.cpp
tests/: CMakeLists.txt  contains.cpp  convex_hull.cpp  has_intersection.cpp  orientation.cpp  random_utils.h
